--- a/templates/header.html
+++ b/templates/header.html
@@ -6,6 +6,6 @@
         <li><a href="./photography.html">Photography</a></li>
         <li><a href="./audio.html">Audio and Recording</a></li>
         <li><a href="./about.html">About Us</a></li>
-        <li><a class="button-light" href="./schedule.html">Book a Schedule</a></li>
+        <li><a class="button-light" href="./schedule.html">Book an Appointment</a></li>
     </ul>
 </nav>
