added page and more photos and info

--- a/templates/header.html
+++ b/templates/header.html
@@ -5,6 +5,7 @@
         <li><a href="./videos.html">Video/Drone</a></li>
         <li><a href="./photography.html">Photography</a></li>
         <li><a href="./audio.html">Audio and Recording</a></li>
+        <li><a href="./photogallery.html">Photogallery</a></li>
         <li><a href="./about.html">About Us</a></li>
         <li><a class="button-light" href="./schedule.html">Book an Appointment</a></li>
     </ul>
