--- a/css/photography.css
+++ b/css/photography.css
@@ -1,5 +1,5 @@
-.camera-bg {
-    background-image: url('../assets/preamp.jpg');
+.audio-bg {
+    background-image: url('../assets/camera.jpg');
     display: flex;
     align-items: center;
     justify-content: center;
@@ -7,103 +7,59 @@
     font-size: 5rem;
 }
 
-.camera-bg h2 {
+.audio-bg h2 {
   position: sticky;
   top: 0;
 }
 
-section#gallery-section {
-  width: 100%;
-  max-width: unset;
-  gap: 0;
+section {
+    padding: 10rem 15rem;
+    scroll-snap-align: center;
 }
 
-section article img.gallery {
-    width: 100%;
-    height: 30vw;
-    border: none;
-    border-radius: unset;
-    object-fit: cover;
-    transform: scale(1.2);
-    transition: transform 0.3s ease; /* Smooth zoom effect */
-}
-
-.gallery-card {
-    flex: 1 0 33.33%;
-    position: relative;
-    height: 30vw;
-    overflow: hidden;
-}
-/* Add the black tint using ::after */
-.gallery-card::after {
-  content: "";
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(0, 0, 0, 0.6); /* Semi-transparent black */
-  opacity: 0;
-  transition: opacity 0.3s ease;
-  z-index: 1; /* Make sure it's above the image but below the text */
-}
-
-.gallery-card:hover .gallery {
-  transform: scale(1);
-}
-
-/* Hover effect to show the tint */
-.gallery-card:hover::after,
-.gallery-card:hover .hover-text {
-  opacity: 1; /* Show the black tint */
-  cursor: pointer;
-}
-
-
-/* Text styling */
-.hover-text {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  color: white;
-  font-size: 20px;
-  opacity: 0;
-  z-index: 2; /* Make sure the text is above the overlay */
-  transition: opacity 0.3s ease;
-  text-align: center;
-}
-  
-section.modal main.modal-content  {
+section:has(#message){
     display: flex;
     justify-content: center;
-    flex-direction: column;
-    padding: 5rem;
- }
+    background-color: var(--gray-color);
+}
 
-section.modal main.modal-content img {
-    width: 80vw;
+section:has(article) {
+    justify-content: center;
+}
+
+section article {
+    overflow: hidden;
+    text-align: center;
+
+}
+
+figure img {
+    width: 90%;
+    height: 90%;
+    border-radius: 5px;
+    aspect-ratio: 1/1;
     margin: auto;
- }
-
- h3, h4 {
-  margin: 2rem 0;
- }
-
- h3 {
-  text-align: center;
- }
-
-
- section.modal main.modal-content h4 {
-  font-size: 2rem;
 }
 
-span {
-  font-size: 1.5rem;
+h4 {
+    font-size: 2rem;
+    margin: 1rem 0 0 0 ;
+}
+#message {
+    display: inline-block;
+    text-align: center;
+    width: clamp(20vw, 90vw, 95vw);
+    font-size: clamp(1.5rem, 2rem, 3rem);
+
 }
 
-#myModal {
-  /* transform: scaleY(-100%); */
-  transition: display 0.6s ease-in-out
+@media (max-width: 768px) {
+    #message {
+        padding: 0 auto;
+    }
+
+    #services {
+        display: flex;
+        flex-direction: column;
+    }
 }
