--- a/css/schedule.css
+++ b/css/schedule.css
@@ -25,7 +25,7 @@ label {
     padding: 1rem 0.5rem;
 }
 
-input {
+input, select {
     margin: 0 0.5rem;
     width: 40ch;
 }
@@ -33,4 +33,12 @@ input {
 #calendar-submit {
     margin-top: 3rem;
     padding: 1rem 2rem;
+}
+
+/* Error message styling */
+.error-message {
+    color: red;
+    font-size: 1.1rem;
+    margin-top: 0.5rem;
+    display: block;
 }
