--- a/css/photogallery.css
+++ b/css/photogallery.css
@@ -1,5 +1,5 @@
 .camera-bg {
-    background-image: url('../assets/preamp.jpg');
+    background-image: url('../assets/aboutheader.jpg');
     display: flex;
     align-items: center;
     justify-content: center;
