--- a/css/layout.css
+++ b/css/layout.css
@@ -32,13 +32,13 @@
 }
 
 .button {
-  text-decoration: none;
-  color: var(--dark-color);
-  width: fit-content;
-  padding: 1rem;
-  border-radius: 30px;
-  border: 1px solid var(--dark-color);
-  font-size: 1.5rem;
+    text-decoration: none;
+    color: var(--dark-color);
+    width: fit-content;
+    padding: 1rem;
+    border-radius: 30px;
+    border: 1px solid var(--dark-color);
+    font-size: 1.5rem;
 }
 
 .button-light {
@@ -59,7 +59,7 @@
 }
 
 .gap-4 {
-    gap:4rem
+    gap: 4rem
 }
 
 .flex-column {
@@ -87,6 +87,7 @@
 .fj-space-around {
     justify-content: space-around;
 }
+
 .fj-space-evenly {
     justify-content: space-evenly;
 }
@@ -130,4 +131,24 @@
 
 .bg-gray {
     background-color: var(--gray-color);
+}
+
+.social-media-list {
+    list-style: none;
+    display: flex;
+    gap: 1rem;
+    justify-content: flex-start;
+    padding: 0;
+    margin: 0;
+}
+
+.social-media-list li a {
+    color: var(--dark-color);
+    font-size: 2rem;
+    text-decoration: none;
+    transition: color 0.3s ease-in-out;
+}
+
+.social-media-list li a:hover {
+    color: var(--light-color);
 }
