--- a/css/layout.css
+++ b/css/layout.css
@@ -59,7 +59,7 @@
 }
 
 .gap-4 {
-    gap: 4rem
+    gap: 4rem;
 }
 
 .flex-column {
@@ -82,7 +82,6 @@
     padding-left: 6rem;
     padding-right: 6rem;
 }
-
 
 .fj-space-around {
     justify-content: space-around;
@@ -118,7 +117,6 @@
 
 .parallax {
     min-height: 90vh;
-    /* Create the parallax scrolling effect */
     background-attachment: fixed;
     background-position: center;
     background-repeat: no-repeat;
@@ -133,11 +131,22 @@
     background-color: var(--gray-color);
 }
 
+.social-media {
+    text-align: center;
+}
+
+.social-media h3 {
+    margin-bottom: 1rem;
+    text-align: center;
+    display: inline-block;
+    width: auto;
+}
+
 .social-media-list {
     list-style: none;
     display: flex;
     gap: 1rem;
-    justify-content: flex-start;
+    justify-content: center;
     padding: 0;
     margin: 0;
 }
@@ -151,4 +160,12 @@
 
 .social-media-list li a:hover {
     color: var(--light-color);
+}
+
+.contact-us h3 {
+    margin-bottom: 1rem;
+}
+
+#footer-logo {
+    margin-left: 0;
 }
