--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,9 +1,32 @@
-<section class="d-flex">
-    <div class="fb-50">
-
+<section class="d-flex fj-space-evenly mtb-5">
+    <!-- Logo on the Left -->
+    <div class="logo fb-30 text-start">
+        <a href="#home">
+            <img id="footer-logo" height="150" src="./assets/logo.svg" alt="Logo">
+        </a>
     </div>
-    <a class="al-content-center" href="#home"><img id="footer-logo" height="150" src="./assets/logo.svg" alt="Logo"></a>
+
+    <!-- Social Media in the Center -->
+    <div class="social-media fb-30 text-center">
+        <h3>Social Media</h3>
+        <ul class="social-media-list">
+            <li><a href="https://facebook.com" target="_blank" aria-label="Facebook"><i class="fab fa-facebook"></i></a>
+            </li>
+            <li><a href="https://twitter.com" target="_blank" aria-label="Twitter"><i class="fab fa-twitter"></i></a>
+            </li>
+            <li><a href="https://instagram.com" target="_blank" aria-label="Instagram"><i
+                        class="fab fa-instagram"></i></a></li>
+            <li><a href="https://tiktok.com" target="_blank" aria-label="TikTok"><i class="fab fa-tiktok"></i></a></li>
+        </ul>
+    </div>
+
+    <!-- Contact Us Section on the Right -->
+    <div class="contact-us fb-30 text-end">
+        <h3>Contact Us</h3>
+        <a href="./schedule.html" class="button-light mt-3">Book With Us</a>
+    </div>
 </section>
+
 <section>
     <p>&copy; 2024 Night Sparrow Productions. All Rights Reserved.</p>
 </section>
