--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,13 +1,19 @@
 <section class="d-flex fj-space-evenly mtb-5">
-    <!-- Logo on the Left -->
-    <div class="logo fb-30 text-start">
+    <!-- Contact Us Section on the Left -->
+    <div class="contact-us fb-30 text-start">
+        <h3>Contact Us</h3>
+        <a href="./schedule.html" class="button-light mt-3">Book With Us</a>
+    </div>
+
+    <!-- Logo in the Center -->
+    <div class="logo fb-30 text-center">
         <a href="#home">
-            <img id="footer-logo" height="150" src="./assets/logo.svg" alt="Logo">
+            <img id="footer-logo" height="150" src="./assets/brand2.svg" alt="Logo">
         </a>
     </div>
 
-    <!-- Social Media in the Center -->
-    <div class="social-media fb-30 text-center">
+    <!-- Social Media on the Right -->
+    <div class="social-media fb-30 text-end">
         <h3>Social Media</h3>
         <ul class="social-media-list">
             <li><a href="https://facebook.com" target="_blank" aria-label="Facebook"><i class="fab fa-facebook"></i></a>
@@ -19,14 +25,8 @@
             <li><a href="https://tiktok.com" target="_blank" aria-label="TikTok"><i class="fab fa-tiktok"></i></a></li>
         </ul>
     </div>
-
-    <!-- Contact Us Section on the Right -->
-    <div class="contact-us fb-30 text-end">
-        <h3>Contact Us</h3>
-        <a href="./schedule.html" class="button-light mt-3">Book With Us</a>
-    </div>
 </section>
 
-<section>
+<section class="copyright">
     <p>&copy; 2024 Night Sparrow Productions. All Rights Reserved.</p>
 </section>
